--- a/VideoPlay/VideoPlay.vcxproj.filters
+++ b/VideoPlay/VideoPlay.vcxproj.filters
@@ -72,4 +72,7 @@
       <Filter>Generated Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\ReadMe.md" />
+  </ItemGroup>
 </Project>
